Playtest round: roll buttons in chat, expertise shown, creature checks, unique names
- Clicking a skill, check or save puts [Normal] [Advantage] [Disadvantage] in chat;
  the roll-options menu is gone. Advantage rolls show both dice.
- Skill tiles show "Expertise (proficiency x2)" and the bonus breakdown; saves too.
- Choice headers name their source ("Monk: ...", "Entertainer: ...").
- /character cast tab-completes known spells, then targets. The spellbook's chat
  line hovers the spell's summary. Condition rules text wraps.
- /dm check works on creatures ([Roll it] / [I rolled...], graded vs a DC).
- A spawn with a taken name is numbered; two identical exact names are ambiguous.
  /dm entity rename/teleport/info tab every creature, not just merchants.
- Spell focus ignores chests and doors, and is silent when it can't cast.
- Annotate menu: [Describe...] / [Trap...] / [Key...] fill the command.
- TEST_PLAN.md: one check per box; lock tests moved to Part 2.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>